# nexus-financial-agent

./: .env.example  .gitignore  GETTING_STARTED.md  MARKET_ANALYSIS.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-hf.yml  tests.yml
config/: agents.yaml  default.yaml  development.yaml  orchestration.yaml  production.yaml  trading.yaml
deploy/: deploy.sh
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  services.yaml
deploy/terraform/: main.tf
docker/: Dockerfile  docker-compose.yml
docker/postgres/: init.sql
docs/: api.md  architecture.md
nexus/: __init__.py  __main__.py
nexus/agents/: __init__.py  base.py  bear.py  bull.py  coordinator.py  event.py  execution.py  fundamental.py  macro.py  market_data.py  portfolio.py  quantitative.py  risk.py  rl_agent.py  sentiment.py  technical.py
nexus/analysis/: __init__.py  attribution.py  optimization.py  sensitivity.py
nexus/backtest/: __init__.py  costs.py  engine.py  metrics.py  regime.py  reports.py  strategy.py  validation.py
nexus/cli/: main.py
nexus/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
nexus/data/: __init__.py  pipeline.py
nexus/data/processors/: __init__.py  features.py  sentiment.py  technical.py
nexus/data/providers/: __init__.py  (+5 more)
nexus/execution/: __init__.py  algorithms.py  broker.py  orders.py  simulator.py  slippage.py
nexus/llm/: __init__.py  cache.py  prompts.py  providers.py  tools.py
nexus/monitoring/: __init__.py  alerts.py  cost.py  health.py  metrics.py  trace.py
nexus/orchestration/: __init__.py  graph.py  memory.py  protocol.py  router.py  state.py
nexus/risk/: __init__.py  limits.py  monitor.py  portfolio.py  scenarios.py  stress.py
nexus/ui/: __init__.py  components.py  layouts.py  themes.py  tui.py
scripts/: generate_report.py  run_backtest.py  run_full_analysis.py  seed_data.py  setup_db.py
tests/: conftest.py
tests/unit/: test_agents.py  test_alerts.py  test_backtest.py  test_cli.py  test_config.py  test_cost_tracking.py  test_data_providers.py  test_exceptions.py  test_execution.py  test_health.py  test_llm.py  test_logging.py  test_monitoring.py  test_orchestration.py  test_processors.py  test_reports.py  test_risk.py  test_storage.py  test_types.py  test_ui.py
(+10 files in other folders)
